--- a/css/2010.css
+++ b/css/2010.css
@@ -1208,7 +1208,7 @@ table.sorttable{
 
 #dep_info_dean_text{
         position: relative;
-	background-color: red;
+	background-color: #000000;
 /*        text-align: right;*/
 }
 
