部局長紹紹介ページのスタイルシート修正
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6123 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/2010.css
+++ b/css/2010.css
@@ -1208,8 +1208,7 @@ table.sorttable{
 
 #dep_info_dean_text{
         position: relative;
-	background-color: #000000;
-/*        text-align: right;*/
+        text-align: right;
 }
 
 #dep_txt{
