部局紹介のcss修正
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6125 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/2010.css
+++ b/css/2010.css
@@ -1206,9 +1206,25 @@ table.sorttable{
         top: 70px; left:530px; 
 }
 
+#dep_info_title{
+        position: relative;
+        top: 16px;
+        width: 705px;
+        height:19px;
+}
+
 #dep_info_dean_text{
         position: relative;
+        top: 12px;
+        width: 705px;
+        height: 38px;
         text-align: right;
+}
+
+#dep_info_text{
+        position: relative;
+        top: 12px;
+        width: 705px;
 }
 
 #dep_txt{
