部局紹介の修正
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6133 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/2010.css
+++ b/css/2010.css
@@ -1181,7 +1181,7 @@ table.sorttable{
 #dep_introduce{
         margin-left: -5px;
         margin-bottom: 30px;
-        background-image: url("../images/en/devision.png");
+        background-image: url("../images/ja/devision.png");
         background-repeat: no-repeat;
         width: 710px;
         height: 300px;
