部局紹介の修正
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6144 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/2010.css
+++ b/css/2010.css
@@ -1204,7 +1204,7 @@ table.sorttable{
 
 #dep_introduce_en h2,
 #dep_introduce_en h3,
-#dep_introduce_en h4,
+#dep_introduce_en h4{
 	display : none;
 }
 
