部局紹介のcss修正
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6161 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/2010.css
+++ b/css/2010.css
@@ -1228,11 +1228,11 @@ table.sorttable{
 }
 
 #dep_info_dean_text{
-        position: relative;
+    position: relative;
         top: 12px;
         width: 705px;
         height: 38px;
-        text-align: right;
+        margin-right:15px;
 }
 
 #dep_info_text{
