部局紹介のcss修正
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6162 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/2010.css
+++ b/css/2010.css
@@ -1232,7 +1232,7 @@ table.sorttable{
         top: 12px;
         width: 705px;
         height: 38px;
-        margin-right:15px;
+        text-align: right;
 }
 
 #dep_info_text{
