--- a/css/2010.css
+++ b/css/2010.css
@@ -1313,7 +1313,7 @@ div.sitemap_contents{
 
 
 /** お問い合わせ **/
-h2.inq {
+h2.inq, h2.inq_err {
 	font-size: 130%;
 	font-weight: bold;
 	color: #666666;
@@ -1322,7 +1322,7 @@ h2.inq {
 	margin: 10px 0;
 }
 
-span.red{
+h2.inq_err {
 	color:#FF3333;
 }
 
