--- a/css/2010.css
+++ b/css/2010.css
@@ -1316,13 +1316,14 @@ div.sitemap_contents{
 h2.inq {
 	font-size: 130%;
 	font-weight: bold;
+	color: #666666;
 	background-image: none;
 	padding: 0;
 	margin: 10px 0;
 }
 
 .inq_err {
-	color:#FF3333;
+	color:#FF3333 !important;
 }
 
 /** 用語解説　**/
