部局紹介のcssのdep_txt_en修正
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6188 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/2010.css
+++ b/css/2010.css
@@ -1255,6 +1255,7 @@ table.sorttable{
         top: 90px; left: 35px;
         width: 630px;
         height: 200px;
+        overflow: hidden;
 }
 
 
