--- a/css/2010.css
+++ b/css/2010.css
@@ -1254,8 +1254,11 @@ table.sorttable{
         position: relative;
         top: 90px; left: 35px;
         width: 630px;
-        height: 110px;
+        height: 200px;
         overflow: hidden;
+}
+#dep_txt_en flv{
+display:none;
 }
 
 a#more{
@@ -1279,7 +1282,7 @@ a#more_en{
 
 #dep_url_en{
         position: relative;
-	top: 10px; left: 35px;
+	top: 10px; left: 0px;
         margin: 0px;
 }
 
