部局紹介のcss修正
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6193 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/2010.css
+++ b/css/2010.css
@@ -1257,7 +1257,7 @@ table.sorttable{
         height: 200px;
         overflow: hidden;
 }
-#dep_txt_en flv{
+#dep_txt_en embed{
 display:none;
 }
 
