--- a/css/2010.css
+++ b/css/2010.css
@@ -1257,9 +1257,12 @@ table.sorttable{
         height: 200px;
         overflow: hidden;
 }
+
+{*
 #dep_txt_en embed{
 display:none;
 }
+*}
 
 a#more{
   display: block;
