部局紹介のcss修正
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6203 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/2010.css
+++ b/css/2010.css
@@ -1258,11 +1258,9 @@ table.sorttable{
         overflow: hidden;
 }
 
-{*
-#dep_txt_en embed{
+#dep_txt_en video{
 display:none;
 }
-*}
 
 a#more{
   display: block;
