部局紹介のcss修正
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6214 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/2010.css
+++ b/css/2010.css
@@ -1254,8 +1254,12 @@ table.sorttable{
         position: relative;
         top: 90px; left: 35px;
         width: 630px;
-        height: 100px;
+        height: 200px;
         overflow: hidden;
+}
+
+#dep_txt_en img{
+        display: none
 }
 
 a#more{
