部局ページ（留学生センター）のcss調整
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6228 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/2010.css
+++ b/css/2010.css
@@ -1258,7 +1258,7 @@ table.sorttable{
         overflow: hidden;
 }
 
-#dep_txt_en FlashVars{
+#dep_txt_en 2011_message_machida_eg.flv{
         display: none
 }
 
