--- a/css/2010.css
+++ b/css/2010.css
@@ -1258,7 +1258,7 @@ table.sorttable{
         overflow: hidden;
 }
 
-#dep_txt_en 2011_message_machida_eg.flv{
+#dep_txt_en flv{
         display: none;
 }
 
