--- a/css/2010.css
+++ b/css/2010.css
@@ -661,7 +661,7 @@ img#prj10{
 	border-width: 3px;
 	border-color: #e7e7df;
 	margin: 6px 6px 0 0;
-	width: 420px;
+	width: 421px;
 }
 		html>/**/body #toppage_notice{
 			clear: right;
@@ -673,22 +673,21 @@ img#prj10{
 	border-width: 3px;
 	border-color: #e7e7df;
 	margin: 6px 6px 0 0;
-	width: 420px;
+	width: 421px;
 }
 		html>/**/body #toppage_press{
 			clear: right;
 		}
 
-#access{
-	/*clear: right;*/
+#toppage_access{
 	float: left;
 	border-style: solid;
 	border-width: 3px;
 	border-color: #e7e7df;
-	width: 332px;
+	width: 254px;
 	margin: 6px 6px 0 0;
 }
-		html>/**/body #access{
+		html>/**/body #toppage_access{
 			clear: right;
 		}
 
