--- a/css/2010.css
+++ b/css/2010.css
@@ -591,6 +591,14 @@ body:first-of-type #contents{
 		margin-left: 5px;
 }
 
+.jump{
+	margin-left: auto;
+}
+		head~/* */body .jump{
+			float: right;
+		}
+
+
 /* トップページの見出し画像にお知らせを出す時に使用 */
 #toppage_important_notice {
   position: absolute;
@@ -634,27 +642,6 @@ img#prj10{
 }
 
 /* 以下、個別のボックスの設定 */
-#greeting{
-	float: left;
-	width: 165px;
-	overflow: hidden;
-	/*height: 255px;*/
-	margin: 20px 0 0 0;
-	padding: 0;
-	font-size: 11px;
-	font-height: 12px;
-	zoom: 1;
-	border-style: solid;
-	border-width: 1px;
-	border-color : #DDDDDD;
-}
-	#greeting p{
-		/*position: absolute;
-		top: 197px;
-		left: 0px;*/
-		margin: 0px 1ex 1em 1ex;
-	}
-
 #toppage_notice{
 	float: left;
 	border-style: solid;
@@ -675,17 +662,70 @@ img#prj10{
 	margin: 6px 6px 0 0;
 	width: 421px;
 }
-		html>/**/body #toppage_press{
+  html>/**/body #toppage_press{
+			clear: right;
+  }
+
+  td.topics_date{
+  	width: 6em;
+    padding-left: 0.5em;
+  	vertical-align: top;
+  }
+  
+  .article{
+  	background: none;
+  		padding-left: 12px;
+  		display: block;
+  }
+  	.article a{
+  		position: relative;
+  		background: none;
+  	}
+  	
+  	.article:hover{
+  		background-image:url(../images/common/arrow_on.png);
+  		background-repeat: no-repeat;
+  		background-position: 0px 3px;
+  	}
+
+  .icon{
+  	width: 30px;
+  	height: 15px;
+  	margin-right: 0;
+  	margin-left: auto;
+  	float: right;
+  	display: inline;
+  	vertical-align: middle;
+  	vertical-align: text-bottom;
+  }
+
+  
+#toppage_greeting{
+	float: left;
+	border-style: solid;
+	border-width: 3px;
+	border-color: #e7e7df;
+	margin: 6px 6px 0 0;
+	width: 254px;
+
+	font-size: 11px;
+	font-height: 12px;
+	zoom: 1;
+}
+		html>/**/body #toppage_greeting{
 			clear: right;
 		}
+	#toppage_greeting p{
+		margin: 0px 1ex 1em 1ex;
+	}
 
 #toppage_access{
 	float: left;
 	border-style: solid;
 	border-width: 3px;
 	border-color: #e7e7df;
-	width: 254px;
 	margin: 6px 6px 0 0;
+	width: 254px;
 }
 		html>/**/body #toppage_access{
 			clear: right;
@@ -737,46 +777,6 @@ img#prj10{
 			visibility: visible;
 		}
 			
-td.topics_date{
-	width: 6em;
-  padding-left: 0.5em;
-	vertical-align: top;
-}
-
-.article{
-	background: none;
-		padding-left: 12px;
-		display: block;
-}
-	.article a{
-		position: relative;
-		background: none;
-	}
-	
-	.article:hover{
-		background-image:url(../images/common/arrow_on.png);
-		background-repeat: no-repeat;
-		background-position: 0px 3px;
-	}
-
-.jump{
-	margin-left: auto;
-}
-		head~/* */body .jump{
-			float: right;
-		}
-
-.icon{
-	width: 30px;
-	height: 15px;
-	margin-right: 0;
-	margin-left: auto;
-	float: right;
-	display: inline;
-	vertical-align: middle;
-	vertical-align: text-bottom;
-}
-
 
 /*
 ------------------------------------------------------------
