--- a/css/2010.css
+++ b/css/2010.css
@@ -718,6 +718,11 @@ img#prj10{
 	#toppage_greeting p{
 		margin: 0px 1ex 1em 1ex;
 	}
+	#toppage_greeting a:hover{
+  		background-image:url(../images/common/arrow_on.png);
+  		background-repeat: no-repeat;
+  		background-position: 0px 3px;
+  	}
 
 #toppage_access{
 	float: left;
