--- a/css/2010.css
+++ b/css/2010.css
@@ -715,10 +715,17 @@ img#prj10{
 		html>/**/body #toppage_greeting{
 			clear: right;
 		}
+  .toppage_yamamoto {
+    display: block;
+    float: left;
+  }
+
 	#toppage_greeting p{
+    clear: left;
 		margin: 0px 1ex 1em 1ex;
 	}
-	#toppage_greeting a:hover{
+	#toppage_greeting a{
+      padding-left:12px;
   		background-image:url(../images/common/arrow_on.png);
   		background-repeat: no-repeat;
   		background-position: 0px 3px;
