--- a/css/2010.css
+++ b/css/2010.css
@@ -716,7 +716,7 @@ img#prj10{
 			clear: right;
 		}
   .toppage_yamamoto {
-    float: left;
+    float: left; !important
     width: 110px;
   }
 
