--- a/css/2010.css
+++ b/css/2010.css
@@ -716,16 +716,13 @@ img#prj10{
 			clear: right;
 		}
 	#toppage_greeting p{
-    clear: left;
 		margin: 0px 1ex 1em 1ex;
 	}
-  #toppage_greeting .toppage_yamamoto {
-    float: left;
-    clear: none;
+  #toppage_yamamoto_name {
+    position: relative;
+    top: 150px;
+    left: 120px;
     width: 110px;
-    height: 110px;
-    display: table-cell;
-    vertical-align: bottom;
   }
 	#toppage_greeting a{
       padding-left:12px;
