--- a/css/2010.css
+++ b/css/2010.css
@@ -719,7 +719,7 @@ img#prj10{
 		margin: 0px 1ex 1em 1ex;
 	}
   #toppage_yamamoto_name {
-    position: relative;
+    position: absolute;
     top: 150px;
     left: 120px;
     width: 110px;
