--- a/css/2010.css
+++ b/css/2010.css
@@ -661,6 +661,7 @@ img#prj10{
 	border-color: #e7e7df;
 	margin: 6px 6px 0 0;
 	width: 421px;
+  height: 235px;
 }
   html>/**/body #toppage_press{
 			clear: right;
