--- a/css/2010.css
+++ b/css/2010.css
@@ -585,6 +585,8 @@ body:first-of-type #contents{
 		overflow: hidden;
 		position: relative;
 		padding: 5px 5px 0 0;
+    width: 100%;
+    height: 100%;
 		zoom: 1;
 	}
 .waku img{
