--- a/css/2010.css
+++ b/css/2010.css
@@ -920,7 +920,7 @@ img#prj10{
 /*	border: 1px solid green; */
 }
 
-.e_text h4 {
+.e_text h4, .e_text h5 {
 	font-size: 13px;
 	font-weight: bold;
 /*	color: #2f2f2f; */
