--- a/css/2010.css
+++ b/css/2010.css
@@ -1,6 +1,16 @@
 @charset "euc-jp";
 
 /*
+============================================================
+ここに書き込んでも反映されません
+新しくCSSのファイルを分割しました
+どのファイルを編集するのかはREADMEを参照してください
+（2011年10月12日 村松）
+============================================================
+*/
+
+
+/*
 ------------------------------------------------------------
   基本的な要素の共通スタイル    
 ------------------------------------------------------------
